# CodeCamp

./: README.md  VM_create.txt
00_C_func_lib_42/: aff_a.c  ft_atoi.c  ft_atoi_base.c  ft_countdown.c  ft_div_mod.c  ft_fibonacci.c  ft_findNextPrime.c  ft_ft.c  ft_inter.c  ft_isPrime.c  ft_iterativeFactorial.c  ft_iterativePower.c  ft_last_word.c  ft_maff_alpha.c  ft_maff_revalpha.c  ft_printParams.c  ft_print_alphabet.c  ft_print_comb.c  ft_print_comb2.c  ft_print_numbers.c  ft_print_pgmName.c  ft_print_reverse_alphabet.c  ft_punbr_base.c  ft_putaddr.c  ft_putchar.c  ft_putnbr.c  ft_putstr.c  ft_range.c  ft_recursiveFactorial.c  ft_recursivePower.c  ft_revParams.c  ft_rev_print.c  ft_rot_13.c  ft_rotone.c  ft_sortParams.c  ft_split.c  ft_sqrt.c  ft_str_is_alpha.c  ft_str_is_lowercase.c  ft_str_is_numeric.c  (+43 more)
02_JavaScript_Algorithms_DataStructures/: RegularExpressions.js  fn+Mutations.js  fn_AddTwoAnd.js  fn_BinaryAgents.js  fn_BooWho.js  fn_Cert_CashRegister.js  fn_Cert_CiferDecoder.js  fn_Cert_PalindromeChecker.js  fn_Cert_PhoneValidator.js  fn_Cert_RomanNumConverter.js  fn_ChunkyMonkey.js  fn_ConfirmEnding.js  fn_ConverTemp.js  fn_ConvertHTMLentities.js  fn_DNApairing.js  fn_DropIt.js  fn_EverythingTrue.js  fn_FactorialNumber.js  fn_FalsyBouncer.js  fn_FindersKeepers.js  fn_LargestNumInArray.js  fn_LongestWordInString.js  fn_MakePerson.js  fn_MissingLetters.js  fn_PigLatin.js  fn_RepeatStringRepeatString.js  fn_ReverseString.js  fn_SearchAndReplace.js  fn_SeekAndDestroy.js  fn_SliceSplice.js  fn_SmallestCommonsMultiple.js  fn_SortedUnion.js  fn_SpinalTap.js  fn_Steamroller.js  fn_SumAll.js  fn_SumAllFibNums.js  fn_SumAllPrimeNum.js  fn_SymmetricDifferenceArray.js  fn_TitleCaseSentence.js  fn_TruncateString.js  (+7 more)
03_FrontEndDevLibs/: CatPhotoApp.html  JQueryPlayground.html  MessagesApp  txt_Bootstrap.html  txt_JQuery.html  txt_React.md  txt_Redux.md  txt_SASS.md
09_Data_Analysis_with_Python/P01_Mean-Variance-Standard_Deviation_Calculator/: mean_var_std.py  pyproject.toml  replit_zip_error_log.txt
09_Data_Analysis_with_Python/P02_Demographic_Data_Analyzer/: demographic_data_analyzer.py  pyproject.toml  replit.nix  replit_zip_error_log.txt
09_Data_Analysis_with_Python/P03_Medical_Data_Visualizer/: main.py  medical_data_visualizer.py  pyproject.toml  replit.nix  replit_zip_error_log.txt
09_Data_Analysis_with_Python/P04_PageView_Time_SeriesVisualizer/: main.py  pyproject.toml  replit.nix  replit_zip_error_log.txt  time_series_visualizer.py
09_Data_Analysis_with_Python/P05_Sea_Level_Predictor/: main.py  pyproject.toml  replit.nix  replit_zip_error_log.txt  sea_level_predictor.py
markdown/: package-lock.json  (+1 more)
(+378 files in other folders)
