[tool.poetry]
name = "repl-nix-boilerplate-demographic-data-analyzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_boilerplate_demographic_data_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
