[tool.poetry]
name = "repl-nix-boilerplate-sea-level-predictor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_boilerplate_sea_level_predictor"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
scipy = "^1.12.0"
matplotlib = "^3.8.2"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
